--- a/style.css
+++ b/style.css
@@ -14,12 +14,11 @@ body{
 .chat-container{
     width: 100%;
     height: 80%;
-    background-color: rgb(133, 171, 241);
+    background-color: rgb(110, 146, 211);
     padding: 20px;
     display: flex;
     flex-direction: column ;
     gap: 20px;
-
     font-size: 20px;
 }
 
@@ -40,8 +39,6 @@ body{
 .ai-chat-box{
     width: 60%;
     position: relative;
-
-
     }
 
 .ai-chat-area{
@@ -51,30 +48,28 @@ body{
     left: 10%;
     border-radius: 0 40px 40px 40px ;
     box-shadow: 2px 2px 10px black;
-
 }
 
 #userImage{
     position: absolute;
     right: 0;
-    filter: drop-shadow( box-shadow 2px 2px 10px black);
+    filter: drop-shadow( 2px 2px 10px black);
 }
 
 #aiImage{
     position: absolute;
     left: 0;
-    filter: drop-shadow( box-shadow 2px 2px 10px black);
+    filter: drop-shadow( 2px 2px 10px black);
 }
 
 .prompt-area{
     width: 100%;
     height: 20%;
-    background-color: rgb(133, 171, 241);
+    background-color: rgb(110, 146, 211);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
-
 }
 
 .prompt-area input{
@@ -89,6 +84,7 @@ body{
     font-size: 20px;
 
 }
+
 .prompt-area button{
     width: 70px;
     height: 70px;
@@ -103,5 +99,7 @@ body{
 .prompt-area :hover{
     background-color: rgb(0 , 0 , 0 , 0.338);
 
-
+}
+.load{
+    filter: drop-shadow( 2px 2px 10px black);
 }
