--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ body{
     color: beige;
     border-radius: 40px 0 40px 40px ;
     box-shadow: 2px 2px 10px black;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+
+}
+
+.chooseimg{   width: 30%;
+    border-radius: 30px;
+
 }
 
 .ai-chat-box{
@@ -55,12 +64,14 @@ body{
     position: absolute;
     right: 0;
     filter: drop-shadow( 2px 2px 10px black);
+
 }
 
 #aiImage{
     position: absolute;
     left: 0;
     filter: drop-shadow( 2px 2px 10px black);
+    
 }
 
 .prompt-area{
@@ -104,3 +115,25 @@ body{
 .load{
     filter: drop-shadow( 2px 2px 10px black);
 }
+
+.choose{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+#image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media(max-width:600px){
+    .user-chat-box{
+        width: 80%;
+        left: 20%;
+    }
+    .user-chat-box{
+        width: 80%;
+    }
+}
+
